fixed background image issue that was showing up on mobile view

--- a/server/client/src/styles.css
+++ b/server/client/src/styles.css
@@ -1,5 +1,5 @@
-body {
-        background: url('./images/blue_sky.jpg')no-repeat center center;
+body, html {
+        background: url('./images/blue_sky.jpg')no-repeat center center fixed;
         width: 100vw;
         height: 100vh;
         background-position: center;
